--- a/css/JECSS.css
+++ b/css/JECSS.css
@@ -6109,12 +6109,12 @@ a.badge:focus {
   position: fixed;
 }
 
-.col-md-6 {
+.half-grid {
   flex: 0 0 auto;
   width: 50%;
 }
 
-.col-md-12 {
+.full-grid {
   flex: 0 0 auto;
   width: 100%;
 }
@@ -6135,4 +6135,13 @@ a.badge:focus {
   appearance: none;
   border-radius: 0.375rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.form-check-input[type=checkbox] {
+  border-radius: 0.25em;
+}
+
+.form-check-input:checked {
+  background-color: #0d6efd;
+  border-color: #0d6efd;
 }
