--- a/admin/css/docs.css
+++ b/admin/css/docs.css
@@ -113,10 +113,10 @@ font-weight:bold;
 	min-height: 40px;
 	padding-right: 20px;
 	padding-left: 20px;
-	background-color: #3dccf8;
+	background-color: #005c9a;
 }
 .login{
-   background-color: #32a5d4;
+   background-color: #005c9a;
     border-radius: 10px 10px 10px 10px;
     color: #ffffff;
     margin: 30px 330px;
@@ -131,7 +131,7 @@ font-weight:bold;
 	font-weight: bold;
 }
 .side_dental{
- margin-top: 160px;
+ margin-top: 25px;
 }
 .body_img img{
 
