--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -8,7 +8,7 @@
 .da-thumbs li {
 	float: left;
 	margin: 5px;
-	background: #fff;
+	background: rgba(75,75,75,0.7);
 	padding: 8px;
 	position: relative;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.1);
@@ -64,7 +64,7 @@
 	margin: 40px 20px 20px 20px;
 	text-transform: uppercase;
 	font-weight: normal;
-	color: rgba(255,255,255,0.9);
+	color: rgba(75,75,75,0.7);
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
 	border-bottom: 1px solid rgba(255,255,255,0.5);
 	box-shadow: 0 1px 0 rgba(0,0,0,0.1), 0 -10px 0 rgba(255,255,255,0.3);
