--- a/css/JECSS.css
+++ b/css/JECSS.css
@@ -3,7 +3,6 @@
  *
  * Copyright 2012 Twitter, Inc
  * Licensed under the Apache License v2.0
- * http://www.apache.org/licenses/LICENSE-2.0
  *
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
  */
@@ -226,12 +225,12 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 20px;
-  color: #fdf9f9;
-  background-color: #ffffff;
+  color: #0c0c0c;
+  background-color: #0f0f0f;
 }
 
 a {
-  color: #ffffff;
+  color: #000000;
   text-decoration: none;
 }
 
@@ -4737,7 +4736,7 @@ input[type="submit"].btn.btn-mini {
 }
 
 .navbar-inverse .navbar-inner {
-  background-color: #005c9a;
+  background-color: #00aff6;
 }
 
 .navbar-inverse .brand,
@@ -6107,77 +6106,4 @@ a.badge:focus {
 
 .affix {
   position: fixed;
-}
-
-.half-grid {
-  flex: 0 0 auto;
-  width: 50%;
-}
-
-.full-grid {
-  flex: 0 0 auto;
-  width: 100%;
-}
-
-.quarter-grid {
-  flex: 0 0 auto;
-  width: 25%;
-}
-
-.form-group {
-  margin-bottom: 1rem;
-  padding: 0px 20px;
-}
-
-
-.form-control {
-  display: block;
-  width: 100%;
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #212529;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: 1px solid #ced4da;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  border-radius: 0.375rem;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
-
-.form-check-input[type=checkbox] {
-  border-radius: 0.25em;
-}
-
-.form-check-input:checked {
-  background-color: #0d6efd;
-  border-color: #0d6efd;
-}
-
-textarea {
-  -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
-}
-
-.table-link {
-  /* color: white; */
-  font-weight: 600 !important;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.row-link:hover {
-  color: #0c83ff;
-  text-decoration: none;
-}
-
-.time-selection {
-  text-align: center; 
-  width: fit-content; 
-  margin: auto !important;
-  padding: 10px 0px;
 }
